# coordinator

./: Cargo.toml  README.md
coordinator/: Cargo.toml
coordinator/examples/: simple.rs
coordinator/src/: coordinator.rs  inner.rs  lib.rs  signal.rs  task.rs
coordinator_derive/: Cargo.toml
coordinator_derive/src/: coordinator.rs  lib.rs
playground/: Cargo.toml
playground/examples/: old_example.rs  old_manual.rs  simple.rs  with_macro.rs  without_macro.rs
playground/src/: main.rs
