[package]
name = "coordinator_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "coordinator_derive is a supporting library for macros"
repository = "https://github.com/tachibanayui/coordinator"
readme = "README.md"
keywords = ["coordinator", "task", "load-balance", "task-runner"]
authors = ["tachibanayui"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.36"
syn = { version = "2.0.71", features = ["full", "extra-traits"] }
